--- a/src/App.css
+++ b/src/App.css
@@ -147,6 +147,16 @@
 	 z-index: 2;
 }
 
+.searchRow {
+	width: 300px;
+}
+
+.searchCol {
+	width: 100px;
+	height: 100px;
+	float: left;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
