--- a/src/RangeSlider.css
+++ b/src/RangeSlider.css
@@ -7,21 +7,21 @@
     margin-top: 200px;
   }
 .albumBox {
-    height: 56px;
-    width: 56px;
+    height: 76px;
+    width: 76px;
     margin: 2px;
     float: left;
     background-color: aquamarine;
 }
 .emptyBox {
-    height: 56px;
-    width: 56px;
+    height: 76px;
+    width: 76px;
     margin: 2px;
     float: left;
     background-color: lightgray;
 }
 .albumsContainer {
-    width: 600px;
+    width: 800px;
     height: 720px;
     /* float: left; */
 }
@@ -34,15 +34,15 @@
     height: 100px;
 }
 .yearEntry {
-    width: 56px;
-    height: 76px;
+    width: 76px;
+    height: 96px;
     margin: 2px;
     float: left;
 }
 
 .albumImg {
-    width: 56px;
-    height: 56px;
+    width: 76px;
+    height: 76px;
 }
 
 .yearTag {
@@ -52,10 +52,31 @@
 }
 
 .yearDelete {
-    width: 10px;
+    width: 15px;
     height: 15px;
-    background-color: red;
-    float: right;
+    padding-right: 2px;
+    color: red;
+    float: left;
+    z-index: 10;
+}
+
+.iconTagDel {
+    color: red;
+    float: left;
+    padding-left: 2px;
+}
+
+.iconTagBr {
+    float: left;
+    padding-left: 2px;
+}
+
+.yearBrowse {
+    width: 15px;
+    height: 15px;
+    padding-right: 2px;
+    /* color: black; */
+    float: left;
 }
 
 .clearButton {
