--- a/src/App.css
+++ b/src/App.css
@@ -155,6 +155,9 @@
 }
 
 .searchCol {
+	font-size: 14px;
+	overflow: hidden;
+  	text-overflow: ellipsis;
 	width: 100px;
 	height: 100px;
 	float: left;
@@ -175,6 +178,17 @@
 	/* float: left; */
 	padding-left: 10px;
 	vertical-align: middle;
+}
+
+.searchBar {
+	border-style: solid;
+    border-width: 2px;
+    border-radius: 8px;
+	padding: 4px;
+    border-color: black;
+	color: black;
+	height: 20px;
+	font-size: 16px;
 }
 
 .yrList {
