--- a/src/RangeSlider.css
+++ b/src/RangeSlider.css
@@ -92,11 +92,27 @@
 .clearButton {
     background-color: red;
     display: inline-block;
+    -webkit-user-select: none; /* Safari */
+    -ms-user-select: none; /* IE 10 and IE 11 */
+    user-select: none;
+    padding: 4px;
+    border-style: solid;
+    border-width: 2px;
+    border-radius: 8px;
+    border-color: darkred
 }
 
 .downloadBtn {
     background-color: yellow;
     display: inline-block;
+    -webkit-user-select: none; /* Safari */
+    -ms-user-select: none; /* IE 10 and IE 11 */
+    user-select: none;
+    padding: 4px;
+    border-style: solid;
+    border-radius: 8px;
+    border-width: 2px;
+    border-color: darkorange
 }
 
 .grid {
