--- a/src/RangeSlider.css
+++ b/src/RangeSlider.css
@@ -23,7 +23,7 @@
 }
 .albumsContainer {
     width: 800px;
-    height: 720px;
+    max-height: 2000px;
     padding: 10px;
     float: right;
     /* float: left; */
@@ -72,13 +72,16 @@
 
 .iconTagDel {
     color: red;
-    float: left;
-    padding-left: 2px;
+    /*float: left;*/
+}
+
+.iconTagEdit {
+    color: orangered;
 }
 
 .iconTagBr {
+    color: black;
     float: left;
-    padding-left: 2px;
 }
 
 .yearBrowse {
